--- a/nodejs/assets/css/global.css
+++ b/nodejs/assets/css/global.css
@@ -4,20 +4,22 @@
     /*considera a borda como tamaho total para não dar BO*/
 }
 
-.content {
-    padding: 1rem;
-    background-color: #fff;
-    height: 100vh;
-    width: 100vw;
+body {
+    background-color: #ffffff;
 }
 
-.content h1 {
-    margin: 0;
+.content {
+    width: 100vw;
+    height: auto;
+    padding: 1rem;
+    background-color: #faf7ef88;
 }
 
 @media screen and (min-width: 992px) {
     .content {
-         max-width: 992px;
-         margin: 0 auto;
+        max-width: 992px;
+        height: auto;
+        margin: 1rem auto;
+        border-radius: 1rem;
     }
 }
