--- a/nodejs/assets/css/pokedex.css
+++ b/nodejs/assets/css/pokedex.css
@@ -1,55 +1,45 @@
-* {
-    font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
-    /*considera a borda como tamaho total para não dar BO*/
-}
-
-.content {
-    padding: 1rem;
-    background-color: #fff;
-    height: 100vh;
-    width: 100vw;
-}
-
-.content h1 {
-    margin: 0;
-}
-
-@media screen and (min-width: 992px) {
-    .content {
-         max-width: 992px;
-         margin: 0 auto;
-    }
-}
-
 .pokemons {
     display: grid;
     grid-template-columns: 1fr;
-    /*cada item ocupa uma fração*/
-    list-style: none;
-    padding: 0;
     margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
+.grass {
+    background-color: #77c850;
+}
+
+.fire {
+    background-color: #ee7f30;
+}
+
+.water {
+    background-color: #678fee;
+}
+
+.poison {
+    background-color: #a040a0;
+}
+
+
 .pokemon {
-    margin: .5rem;
-    padding: 1rem;
-    background-color: #49d0b0;
-    color: white;
-    border-radius: 1rem;
     display: flex;
     flex-direction: column;
-    /*deixa um embaxo do outro*/
+    margin: .2rem;
+    padding: 1rem;
+    border-radius: 1rem;
 }
 
 .pokemon .number {
-    color: #000;
-    opacity: .3;
+    color: #fff7f7;
+    opacity: .5;
     text-align: right;
     font-size: .625rem;
 }
 
 .pokemon .name {
+    text-transform: capitalize;
     color: #fff;
     margin-bottom: .25rem;
 }
@@ -59,6 +49,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+
 }
 
 .pokemon .detail .types {
@@ -68,19 +59,39 @@
 }
 
 .pokemon .detail .types .type {
-    background-color: #61e1ca;
     color: #fff;
     padding: .25rem .5rem;
-    font-size: .625rem;
     margin: .25rem 0;
+    font-size: .625rem;
+    filter: brightness(1.1);
+    text-align: center;
+    border: solid;
+    border-width: 1px;
     border-radius: 1rem;
-
 }
 
 .pokemon .detail img {
     max-width: 100%;
     height: 70px;
-    align-self: flex-end;
+}
+
+.pagination {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 1rem;
+}
+
+.pagination button {
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    color: #fff;
+    background-color: #6c79db;
+    border: none;
+    border-radius: 1rem;
 }
 
 @media screen and (min-width: 380px) {
